@@ -11,6 +11,9 @@ version 3.013:
 	- dependency on Mail::Message 3, not 4.
 	  github issue #1 [Slaven Rezić] cpantesters
 
+	Improvements:
+	- introduce attribute boxnr
+
 version 3.012: Mon 24 Nov 19:15:06 CET 2025
 
 	Changes:
